ass4_14CS10062/y.output
Terminals unused in grammar

   SINGLE_LINE_COMMENT
   MULTI_LINE_COMMENT
   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD
   HASH


State 325 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE

    5 constant: INTEGER_CONSTANT
    6         | FLOATING_CONSTANT
    7         | CHAR_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 postfix_expression: primary_expression
   10                   | postfix_expression LEFT_SQUARE_BRACE expression RIGHT_SQUARE_BRACE
   11                   | postfix_expression LEFT_ROUND_BRACE argument_expression_list_opt RIGHT_ROUND_BRACE
   12                   | postfix_expression PERIOD IDENTIFIER
   13                   | postfix_expression POINTS_TO IDENTIFIER
   14                   | postfix_expression PLUS_PLUS
   15                   | postfix_expression MINUS_MINUS
   16                   | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
   17                   | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

   18 argument_expression_list_opt: argument_expression_list
   19                             | %empty

   20 argument_expression_list: assignment_expression
   21                         | argument_expression_list COMMA assignment_expression

   22 unary_expression: postfix_expression
   23                 | PLUS_PLUS unary_expression
   24                 | MINUS_MINUS unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF_KEYWORD unary_expression
   27                 | SIZEOF_KEYWORD LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE

   28 unary_operator: AMPERSAND
   29               | MULTIPLICATION
   30               | PLUS
   31               | MINUS
   32               | TILDE
   33               | EXCLIMATION

   34 cast_expression: unary_expression
   35                | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression MULTIPLICATION cast_expression
   38                          | multiplicative_expression FORWARD_SLASH cast_expression
   39                          | multiplicative_expression PERCENTAGE cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression MINUS multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_SHIFT additive_expression
   45                 | shift_expression RIGHT_SHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LESS_THAN shift_expression
   48                      | relational_expression GREATER_THAN shift_expression
   49                      | relational_expression LESS_THAN_EQUAL shift_expression
   50                      | relational_expression GREATER_THAN_EQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUAL_EQUAL relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression

   54 AND_expression: equality_expression
   55               | AND_expression AMPERSAND equality_expression

   56 exclusive_OR_expression: AND_expression
   57                        | exclusive_OR_expression CARET AND_expression

   58 inclusive_OR_expression: exclusive_OR_expression
   59                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression LOGICAL_AND inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression LOGICAL_OR logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression QUESTION_MARK expression COLON conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: EQUAL
   69                    | MULTIPLICATION_EQUAL
   70                    | SLASH_EQUAL
   71                    | PERCENTAGE_EQUAL
   72                    | PLUS_EQUAL
   73                    | MINUS_EQUAL
   74                    | LEFT_SHIFT_EQUAL
   75                    | RIGHT_SHIFT_EQUAL
   76                    | BITWISE_AND_EQUAL
   77                    | BITWISE_NOT_EQUAL
   78                    | BITWISE_OR_EQUAL

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON_TERMINATOR

   83 init_declarator_list_opt: init_declarator_list
   84                         | %empty

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | %empty

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator EQUAL initializer

   95 storage_class_specifier: EXTERN_KEYWORD
   96                        | STATIC_KEYWORD
   97                        | AUTO_KEYWORD
   98                        | REGISTER_KEYWORD

   99 type_specifier: VOID_KEYWORD
  100               | CHAR_KEYWORD
  101               | SHORT_KEYWORD
  102               | INT_KEYWORD
  103               | LONG_KEYWORD
  104               | FLOAT_KEYWORD
  105               | DOUBLE_KEYWORD
  106               | SIGNED_KEYWORD
  107               | UNSIGNED_KEYWORD
  108               | _BOOL_KEYWORD
  109               | _COMPLEX_KEYWORD
  110               | _IMAGINARY_KEYWORD
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | %empty

  116 enum_specifier: ENUM_KEYWORD identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | ENUM_KEYWORD identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | ENUM_KEYWORD IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | %empty

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: ENUMERATION_CONSTANT
  124           | ENUMERATION_CONSTANT EQUAL constant_expression

  125 type_qualifier: CONST_KEYWORD
  126               | RESTRICT_KEYWORD
  127               | VOLATILE_KEYWORD

  128 function_specifier: INLINE_KEYWORD

  129 declarator: pointer_opt direct_declarator

  130 pointer_opt: pointer
  131            | %empty

  132 direct_declarator: IDENTIFIER
  133                  | LEFT_ROUND_BRACE declarator RIGHT_ROUND_BRACE
  134                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list_opt assignment_expression_opt RIGHT_SQUARE_BRACE
  135                  | direct_declarator LEFT_SQUARE_BRACE STATIC_KEYWORD type_qualifier_list_opt assignment_expression RIGHT_SQUARE_BRACE
  136                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list STATIC_KEYWORD assignment_expression RIGHT_SQUARE_BRACE
  137                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list_opt MULTIPLICATION RIGHT_SQUARE_BRACE
  138                  | direct_declarator LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  139                  | direct_declarator LEFT_ROUND_BRACE identifier_list_opt RIGHT_ROUND_BRACE

  140 type_qualifier_list_opt: type_qualifier_list
  141                        | %empty

  142 assignment_expression_opt: assignment_expression
  143                          | %empty

  144 identifier_list_opt: identifier_list
  145                    | %empty

  146 pointer: MULTIPLICATION type_qualifier_list_opt
  147        | MULTIPLICATION type_qualifier_list_opt pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list COMMA ELIPSES

  152 parameter_list: parameter_declaration
  153               | parameter_list COMMA parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list COMMA IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
  161            | LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

  162 initializer_list: designation_opt initializer
  163                 | initializer_list COMMA designation_opt initializer

  164 designation_opt: designation
  165                | %empty

  166 designation: designator_list EQUAL

  167 designator_list: designator
  168                | designator_list designator

  169 designator: LEFT_SQUARE_BRACE constant_expression RIGHT_SQUARE_BRACE
  170           | PERIOD IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER COLON statement
  178                  | CASE_KEYWORD constant_expression COLON statement
  179                  | DEFAULT_KEYWORD COLON statement

  180 compound_statement: LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

  181 block_item_list_opt: block_item_list
  182                    | %empty

  183 block_item_list: block_item
  184                | block_item_list block_item

  185 block_item: declaration
  186           | statement

  187 expression_statement: expression_opt SEMICOLON_TERMINATOR

  188 expression_opt: expression
  189               | %empty

  190 selection_statement: IF_KEYWORD LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement ELSE_KEYWORD statement
  191                    | IF_KEYWORD LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement
  192                    | SWITCH_KEYWORD LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement

  193 iteration_statement: WHILE_KEYWORD LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement
  194                    | DO_KEYWORD statement WHILE_KEYWORD LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE SEMICOLON_TERMINATOR
  195                    | FOR_KEYWORD LEFT_ROUND_BRACE expression_opt SEMICOLON_TERMINATOR expression_opt SEMICOLON_TERMINATOR expression_opt RIGHT_ROUND_BRACE statement
  196                    | FOR_KEYWORD LEFT_ROUND_BRACE declaration expression_opt SEMICOLON_TERMINATOR expression_opt RIGHT_ROUND_BRACE statement

  197 jump_statement: GOTO_KEYWORD IDENTIFIER SEMICOLON_TERMINATOR
  198               | CONTINUE_KEYWORD SEMICOLON_TERMINATOR
  199               | BREAK_KEYWORD SEMICOLON_TERMINATOR
  200               | RETURN_KEYWORD expression_opt SEMICOLON_TERMINATOR

  201 translation_unit: external_declaration
  202                 | translation_unit external_declaration

  203 external_declaration: function_definition
  204                     | declaration

  205 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  206 declaration_list_opt: declaration_list
  207                     | %empty

  208 declaration_list: declaration
  209                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
SINGLE_LINE_COMMENT (258)
MULTI_LINE_COMMENT (259)
AUTO_KEYWORD (260) 97
BREAK_KEYWORD (261) 199
CASE_KEYWORD (262) 178
CHAR_KEYWORD (263) 100
CONST_KEYWORD (264) 125
CONTINUE_KEYWORD (265) 198
DEFAULT_KEYWORD (266) 179
DO_KEYWORD (267) 194
DOUBLE_KEYWORD (268) 105
ELSE_KEYWORD (269) 190
ENUM_KEYWORD (270) 116 117 118
EXTERN_KEYWORD (271) 95
FLOAT_KEYWORD (272) 104
FOR_KEYWORD (273) 195 196
GOTO_KEYWORD (274) 197
IF_KEYWORD (275) 190 191
INLINE_KEYWORD (276) 128
INT_KEYWORD (277) 102
LONG_KEYWORD (278) 103
REGISTER_KEYWORD (279) 98
RESTRICT_KEYWORD (280) 126
RETURN_KEYWORD (281) 200
SHORT_KEYWORD (282) 101
SIGNED_KEYWORD (283) 106
SIZEOF_KEYWORD (284) 26 27
STATIC_KEYWORD (285) 96 135 136
STRUCT_KEYWORD (286)
SWITCH_KEYWORD (287) 192
TYPEDEF_KEYWORD (288)
UNION_KEYWORD (289)
UNSIGNED_KEYWORD (290) 107
VOID_KEYWORD (291) 99
VOLATILE_KEYWORD (292) 127
WHILE_KEYWORD (293) 193 194
_BOOL_KEYWORD (294) 108
_COMPLEX_KEYWORD (295) 109
_IMAGINARY_KEYWORD (296) 110
IDENTIFIER (297) 1 12 13 118 119 132 156 157 170 177 197
INTEGER_CONSTANT (298) 5
FLOATING_CONSTANT (299) 6
ENUMERATION_CONSTANT (300) 8 123 124
CHAR_CONSTANT (301) 7
STRING_LITERAL (302) 3
LEFT_SQUARE_BRACE (303) 10 134 135 136 137 169
RIGHT_SQUARE_BRACE (304) 10 134 135 136 137 169
LEFT_ROUND_BRACE (305) 4 11 16 17 27 35 133 138 139 190 191 192 193
    194 195 196
RIGHT_ROUND_BRACE (306) 4 11 16 17 27 35 133 138 139 190 191 192 193
    194 195 196
LEFT_CURLY_BRACE (307) 16 17 116 117 160 161 180
RIGHT_CURLY_BRACE (308) 16 17 116 117 160 161 180
PERIOD (309) 12 170
POINTS_TO (310) 13
PLUS_PLUS (311) 14 23
MINUS_MINUS (312) 15 24
AMPERSAND (313) 28 55
MULTIPLICATION (314) 29 37 137 146 147
PLUS (315) 30 41
MINUS (316) 31 42
TILDE (317) 32
EXCLIMATION (318) 33
FORWARD_SLASH (319) 38
PERCENTAGE (320) 39
LEFT_SHIFT (321) 44
RIGHT_SHIFT (322) 45
LESS_THAN (323) 47
GREATER_THAN (324) 48
LESS_THAN_EQUAL (325) 49
GREATER_THAN_EQUAL (326) 50
EQUAL_EQUAL (327) 52
NOT_EQUAL (328) 53
CARET (329) 57
BITWISE_OR (330) 59
LOGICAL_AND (331) 61
LOGICAL_OR (332) 63
QUESTION_MARK (333) 65
COLON (334) 65 177 178 179
SEMICOLON_TERMINATOR (335) 82 187 194 195 196 197 198 199 200
ELIPSES (336) 151
EQUAL (337) 68 94 124 166
MULTIPLICATION_EQUAL (338) 69
SLASH_EQUAL (339) 70
PERCENTAGE_EQUAL (340) 71
PLUS_EQUAL (341) 72
MINUS_EQUAL (342) 73
LEFT_SHIFT_EQUAL (343) 74
RIGHT_SHIFT_EQUAL (344) 75
BITWISE_AND_EQUAL (345) 76
BITWISE_NOT_EQUAL (346) 77
BITWISE_OR_EQUAL (347) 78
COMMA (348) 17 21 80 92 117 122 151 153 157 161 163
HASH (349)


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
primary_expression (96)
    on left: 1 2 3 4, on right: 9
constant (97)
    on left: 5 6 7 8, on right: 2
postfix_expression (98)
    on left: 9 10 11 12 13 14 15 16 17, on right: 10 11 12 13 14 15
    22
argument_expression_list_opt (99)
    on left: 18 19, on right: 11
argument_expression_list (100)
    on left: 20 21, on right: 18 21
unary_expression (101)
    on left: 22 23 24 25 26 27, on right: 23 24 26 34 67
unary_operator (102)
    on left: 28 29 30 31 32 33, on right: 25
cast_expression (103)
    on left: 34 35, on right: 25 35 36 37 38 39
multiplicative_expression (104)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (105)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (106)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (107)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (108)
    on left: 51 52 53, on right: 52 53 54 55
AND_expression (109)
    on left: 54 55, on right: 55 56 57
exclusive_OR_expression (110)
    on left: 56 57, on right: 57 58 59
inclusive_OR_expression (111)
    on left: 58 59, on right: 59 60 61
logical_AND_expression (112)
    on left: 60 61, on right: 61 62 63
logical_OR_expression (113)
    on left: 62 63, on right: 63 64 65
conditional_expression (114)
    on left: 64 65, on right: 65 66 81
assignment_expression (115)
    on left: 66 67, on right: 20 21 67 79 80 135 136 142 159
assignment_operator (116)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 67
expression (117)
    on left: 79 80, on right: 4 10 65 80 188 190 191 192 193 194
constant_expression (118)
    on left: 81, on right: 124 169 178
declaration (119)
    on left: 82, on right: 185 196 204 208 209
init_declarator_list_opt (120)
    on left: 83 84, on right: 82
declaration_specifiers (121)
    on left: 85 86 87 88, on right: 82 89 154 155 205
declaration_specifiers_opt (122)
    on left: 89 90, on right: 85 86 87 88
init_declarator_list (123)
    on left: 91 92, on right: 83 92
init_declarator (124)
    on left: 93 94, on right: 91 92
storage_class_specifier (125)
    on left: 95 96 97 98, on right: 85
type_specifier (126)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    86 112
specifier_qualifier_list (127)
    on left: 112 113, on right: 114 158
specifier_qualifier_list_opt (128)
    on left: 114 115, on right: 112 113
enum_specifier (129)
    on left: 116 117 118, on right: 111
identifier_opt (130)
    on left: 119 120, on right: 116 117
enumerator_list (131)
    on left: 121 122, on right: 116 117 122
enumerator (132)
    on left: 123 124, on right: 121 122
type_qualifier (133)
    on left: 125 126 127, on right: 87 113 148 149
function_specifier (134)
    on left: 128, on right: 88
declarator (135)
    on left: 129, on right: 93 94 133 154 205
pointer_opt (136)
    on left: 130 131, on right: 129
direct_declarator (137)
    on left: 132 133 134 135 136 137 138 139, on right: 129 134 135
    136 137 138 139
type_qualifier_list_opt (138)
    on left: 140 141, on right: 134 135 137 146 147
assignment_expression_opt (139)
    on left: 142 143, on right: 134
identifier_list_opt (140)
    on left: 144 145, on right: 139
pointer (141)
    on left: 146 147, on right: 130 147
type_qualifier_list (142)
    on left: 148 149, on right: 136 140 149
parameter_type_list (143)
    on left: 150 151, on right: 138
parameter_list (144)
    on left: 152 153, on right: 150 151 153
parameter_declaration (145)
    on left: 154 155, on right: 152 153
identifier_list (146)
    on left: 156 157, on right: 144 157
type_name (147)
    on left: 158, on right: 16 17 27 35
initializer (148)
    on left: 159 160 161, on right: 94 162 163
initializer_list (149)
    on left: 162 163, on right: 16 17 160 161 163
designation_opt (150)
    on left: 164 165, on right: 162 163
designation (151)
    on left: 166, on right: 164
designator_list (152)
    on left: 167 168, on right: 166 168
designator (153)
    on left: 169 170, on right: 167 168
statement (154)
    on left: 171 172 173 174 175 176, on right: 177 178 179 186 190
    191 192 193 194 195 196
labeled_statement (155)
    on left: 177 178 179, on right: 171
compound_statement (156)
    on left: 180, on right: 172 205
block_item_list_opt (157)
    on left: 181 182, on right: 180
block_item_list (158)
    on left: 183 184, on right: 181 184
block_item (159)
    on left: 185 186, on right: 183 184
expression_statement (160)
    on left: 187, on right: 173
expression_opt (161)
    on left: 188 189, on right: 187 195 196 200
selection_statement (162)
    on left: 190 191 192, on right: 174
iteration_statement (163)
    on left: 193 194 195 196, on right: 175
jump_statement (164)
    on left: 197 198 199 200, on right: 176
translation_unit (165)
    on left: 201 202, on right: 0 202
external_declaration (166)
    on left: 203 204, on right: 201 202
function_definition (167)
    on left: 205, on right: 203
declaration_list_opt (168)
    on left: 206 207, on right: 205
declaration_list (169)
    on left: 208 209, on right: 206 209


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   97 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM_KEYWORD . identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | ENUM_KEYWORD . identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


State 6

   95 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: INT_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: _BOOL_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: _COMPLEX_KEYWORD .

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: _IMAGINARY_KEYWORD .

    $default  reduce using rule 110 (type_specifier)


State 22

  204 external_declaration: declaration .

    $default  reduce using rule 204 (external_declaration)


State 23

   82 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON_TERMINATOR
  205 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    MULTIPLICATION  shift, and go to state 34

    SEMICOLON_TERMINATOR  reduce using rule 84 (init_declarator_list_opt)
    $default              reduce using rule 131 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   85 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   86 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   88 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  202 translation_unit: translation_unit . external_declaration

    $end                shift, and go to state 46
    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


State 30

  201 translation_unit: external_declaration .

    $default  reduce using rule 201 (translation_unit)


State 31

  203 external_declaration: function_definition .

    $default  reduce using rule 203 (external_declaration)


State 32

  118 enum_specifier: ENUM_KEYWORD IDENTIFIER .
  119 identifier_opt: IDENTIFIER .

    LEFT_CURLY_BRACE  reduce using rule 119 (identifier_opt)
    $default          reduce using rule 118 (enum_specifier)


State 33
